--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -23,7 +23,7 @@
               %li.dropdown.dropdown-small
                 %a.dropdown-toggle{:href => registrar_usuario_sessions_path} Registrarse
             %li.dropdown.dropdown-small
-              %a.dropdown-toggle{:href => "/tarifas"} Tarifas
+              %a.dropdown-toggle{:href => "/tarifas"}
         .clearfix
   .header-nav.animate-dropdown.main-header
     .container
