--- a/app/views/admin/customers/_form.html.haml
+++ b/app/views/admin/customers/_form.html.haml
@@ -14,6 +14,7 @@
   = f.label :telefono, class: "info-title"
   = f.text_field :telefono, class: "form-control unicase-form-control text-input", required: true, maxlength: 11
 - if @customer.id.blank?
+  = f.hidden_field :terms, value: 1
   .form-group.col-md-4
     = f.label :clave, class: "info-title"
     = f.password_field :clave, class: "form-control unicase-form-control text-input", required: true, value: @customer.clave
