--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -112,32 +112,7 @@
               <table class="table table-bordered">
                 <tbody>
                 <!--NUEVA TABLA-->
-                  <tr class="nymou"> <!-- PRIMER ROW -->
-                    <% if @truck.type_truck_id != 5 %>
-                      <td class="cell-label">
-                        <b>Marca Motor</b><br>
-                        <%= @truck.motors_truck ? @truck.motors_truck.name : 'Sin información' %>
-                      </td>
-                        
-                      <td class="cell-label">
-                        <b>Marca de la Caja</b><br>
-                        <%=@truck.boxes_truck ? @truck.boxes_truck.name : 'Sin Información' %>
-                      </td>
-                      <td class="cell-label">
-                        <b>Marca de Transmisión</b><br>
-                        <%= @truck.transmissions_truck ? @truck.transmissions_truck.name : 'Sin Información' %>
-                      </td>
-                      <td class="cell-label">
-                        <b>Empresa Afiliada</b><br>
-                        <%= @truck.empresaafiliada? ? @truck.empresaafiliada : 'Sin información' %>
-                      </td>
-                        
-                      <td class="cell-label">
-                        <b>Unico Dueño</b><br>
-                        <%= @truck.unicodueno!= nil ? (@truck.unicodueno? ? 'Si': 'No') : 'Sin Información' %>
-                      </td>
-                    <% end %>
-                  </tr>
+                  <%= render partial: 'shared/showCamposGeneralesI' , locals: { object: @truck }  %>
                   <!--TRACTOMULA-->
                       <% if @truck.type_truck_id ==1 %>
                           <tr class="nymou">
@@ -150,44 +125,16 @@
                                   <b>Tipo Cupo</b><br>
                                       <%= @truck.spaces_truck_id.nil? ?  'Sin Información' : @truck.spaces_truck.name  %>
                               </td>
-                              <td class="cell-label">
-                                  <b>Motor Reparado</b><br>
-                                      <%=  @truck.motorreparado.nil? ?  'Sin Información' : (@truck.motorreparado? ? 'Si': 'No') %>
-                              </td>
-                              <td class="cell-label">
-                                <b>Negociable</b><br>
-                                <%=  @truck.negociable.nil? ?  'Sin Información' : (@truck.negociable? ? 'Si': 'No') %>
-                              </td>
+                              <td class="cell-label"></td>
+                              <td class="cell-label"></td>
                               <td class="cell-label">
                                 <b>Se vende con trailer</b><br>
                                 <%=  @truck.sevendecontrailer.nil? ?  'Sin Información' : (@truck.sevendecontrailer=='Si' ? 'Si': 'No') %>
                               </td>
                           </tr>
-
-                          <tr class="nymou">
-                              <%if @truck.sevendecontrailer=='Si' %>
-                              <td class="cell-label">
-                                  <b>Marca Trailer</b><br>
-                                  <%= @truck.marcatrailer? ? @truck.marcatrailer : 'Sin Información' %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Tipo de Trailer</b><br>
-                                  <%= @truck.tipotrailer? ? @truck.tipotrailer : 'Sin Información'%>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Modelo Trailer</b><br>
-                                  <%= @truck.modelotrailer? ? @truck.modelotrailer : 'Sin Información' %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Número de ejes del Trailer</b><br>
-                                  <%= @truck.numeroejestrailer? ? @truck.numeroejestrailer : 'Sin Información' %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Número de ejes Retractiles</b><br>
-                                  <%= @truck.ejesretractiles? ?  @truck.ejesretractiles : 'Sin Información' %>
-                              </td>
-                              <% end %>
-                          </tr>
+                          <%if @truck.sevendecontrailer=='Si' %>
+                            <%= render partial: 'shared/showSeVendeTrailler' ,locals: { object: @truck} %>
+                          <% end %>
                       <% end %>
                   <!--VOLQUETA-->
                       <% if @truck.type_truck_id==2 %>
@@ -213,26 +160,12 @@
                                   <%= @truck.autocarpado.nil? ? 'Sin Información' : @truck.autocarpado %>
                               </td>
                           </tr>
-
-                          <tr class="nymou">
-                            <td class="cell-label">
-                              <b>Motor Reparado</b><br>
-                              <%=  @truck.motorreparado.nil? ?  'Sin Información' : (@truck.motorreparado? ? 'Si': 'No') %>
-                            </td>
-                            <td class="cell-label">
-                              <b>Negociable</b><br>
-                              <%=  @truck.negociable.nil? ?  'Sin Información' : (@truck.negociable? ? 'Si': 'No') %>
-                            </td>
-                            <td class="cell-label"></td>
-                            <td class="cell-label"></td>
-                            <td class="cell-label"></td>
-                          </tr>
                       <% end%>
                   <!--CAMION-->
                       <% if @truck.type_truck_id == 3 %>
                           <tr class="nymou">
                             <td class="cell-label">
-                              <b>Capacidad de Carga</b><br>
+                              <b>Capacidad de Carga Matricula</b><br>
                               <%=  @truck.capacidadcarga.nil? ?  'Sin Información' : @truck.capacidadcarga %>
                             </td>
                             <td class="cell-label">
@@ -257,188 +190,59 @@
                               <b>Poliza</b><br>
                               <%=  @truck.contracts_truck_id.nil? ?  'Sin Información' : @truck.contracts_truck.name %>
                             </td>
-                            <td class="cell-label">
-                              <b>Motor Reparado</b><br>
-                              <%=  @truck.motorreparado.nil? ?  'Sin Información' : (@truck.motorreparado? ? 'Si': 'No') %>
-                            </td>
-                            <td class="cell-label">
-                              <b>Negociable</b><br>
-                              <%=  @truck.negociable.nil? ?  'Sin Información' : (@truck.negociable? ? 'Si': 'No') %>
-                            </td>
+                            <td class="cell-label"></td>
+                            <td class="cell-label"></td>
                             <td class="cell-label"></td>
                             <td class="cell-label"></td>
                           </tr>
                       <% end %>
                   <!--BUS-->
                       <% if @truck.type_truck_id == 4 %>
-                          <tr class="nymou">
-                              <td class="cell-label">
-                                  <b>Capacidad Pasajeros</b><br>
-                                  <%=  @truck.capacidadpasajeros.nil? ?  'Sin Información' : @truck.capacidadpasajeros %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Capacidad de Carga</b><br>
-                                  <%=  @truck.capacidadcarga.nil? ?  'Sin Información' : @truck.capacidadcarga %>
-                              </td>
-
-                              <td class="cell-label">
-                                  <b>Marca Carroceria</b><br>
-                                  <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id) %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Poliza</b><br>
-                                  <%=  @truck.contracts_truck_id.nil? ?  'Sin Información' : @truck.contracts_truck.name %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Se vende con cupo</b><br>
-                                  <%=  @truck.cupo.nil? ?  'Sin Información' : @truck.cupo? ? 'Si' : 'No' %>
-                              </td>
-
-                          </tr>
-                          <tr class="nymou">
-                              <td class="cell-label">
-                                  <b>Transmision Reparada</b><br>
-                                  <%=  @truck.transmisionreparada.nil? ?  'Sin Información' : @truck.transmisionreparada? ? 'Si': 'No' %>
-                              </td>
-
-                              <td class="cell-label">
-                                  <b>Frenos ABS</b><br>
-                                  <%=  @truck.frenosabs.nil? ?  'Sin Información' : @truck.frenosabs? ? 'Si' : 'No' %>
-                              </td>
-                            <td class="cell-label">
-                                  <b>Vigia</b><br>
-                                  <%=  @truck.vigia.nil? ?  'Sin Información' : @truck.vigia %>
-                            </td>
-
-                              <td class="cell-label">
-                                  <b>Sillas Reclinables</b><br>
-                                  <%=  @truck.sillareclinable.nil? ?  'Sin Información' : @truck.sillareclinable? ? 'Si' : 'No' %>
-                              </td>
-                              <td class="cell-label">
-                                  <b>Baño</b><br>
-                                  <%=  @truck.bano.nil? ?  'Sin Información' : @truck.bano? ? 'Si' : 'No' %>
-                              </td>
-                          </tr>
-                          <tr class="nymou">
-                              <td class="cell-label">
-                                  <b>Descansa Pies</b><br>
-                                  <%=  @truck.descansapies.nil? ?  'Sin Información' : @truck.descansapies? ? 'Si': 'No' %>
-                              </td>
-
-                              <td class="cell-label">
-                                <b>TV.</b><br>
-                                <%=  @truck.tv.nil? ?  'Sin Información' : @truck.tv? ? 'Si' : 'No' %>
-                              </td>
-                              <td class="cell-label">
-                                <b>Pantalla Individual</b><br>
-                                <%=  @truck.pantallaindividual.nil? ?  'Sin Información' : @truck.pantallaindividual? ? 'Si': 'No' %>
-                              </td>
-
-                              <td class="cell-label">
-                                <b>Wifi</b><br>
-                                <%=  @truck.wifi.nil? ?  'Sin Información' : @truck.wifi? ? 'Si' : 'No' %>
-                              </td>
-                              <td class="cell-label">
-                                <b>Audio</b><br>
-                                <%=  @truck.audio.nil? ?  'Sin Información' : @truck.audio? ? 'Si' : 'No' %>
-                              </td>
-                            </tr>
-                          <tr class="nymou">
-                              <td class="cell-label">
-                                  <b>Negociable</b><br>
-                                  <%=  @truck.negociable.nil? ?  'Sin Información' : (@truck.negociable? ? 'Si': 'No') %>
-                              </td>
-                              <td class="cell-label"></td>
-                              <td class="cell-label"></td>
-                              <td class="cell-label"></td>
-                              <td class="cell-label"></td>
-                          </tr>
+                        <%= render partial: 'shared/showBusyVan', locals: { object: @truck} %>
                       <% end %>
                   <!--TRAILER-->
                       <% if @truck.type_truck_id == 5 %>
-                          < class="nymou">
+                          <tr class="nymou">
                               <td class="cell-label">
                                 <b>Tipo de Carrroceria</b><br>
-                                <%=  @truck.tipocarroceria_id.nil? ?  'Sin Información' : TipoCarroceria.find(@truck.tipocarroceria).name %>
+                                <%=  @truck.tipo_carroceria_id.nil? ?  'Sin Información' : TipoCarroceria.find(@truck.tipo_carroceria_id).name %>
                               </td>
                               <td class="cell-label">
                                 <b>Marca Carroceria</b><br>
-                                <%=  @truck.marcacarroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marcacarroceria_id) %>
+                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id) %>
                               </td>
                               <td class="cell-label">
                                 <b>Marca Carpa</b><br>
                                 <%=  @truck.marcacarpa.nil? ?  'Sin Información' : @truck.marcacarpa %>
                               </td>
-                              <td class="cell-label">
-                                  <b>Unico Dueño</b><br>
-                                  <%= @truck.unicodueno!= nil ? (@truck.unicodueno? ? 'Si': 'No') : 'Sin Información' %>
+                             <td class="cell-label">
+                                  <b>Quinta Rueda</b><br>
+                                  <%= @truck.wheels_truck_id? ? @truck.wheels_truck.name: 'Sin Información' %>
                               </td>
-                              <td class="cell-label">
-                                  <b>Se vende con trailer</b><br>
-                                  <%=  @truck.sevendecontrailer.nil? ?  'Sin Información' : (@truck.sevendecontrailer=='Si' ? 'Si': 'No') %>
-                              </td>
+                              
+                              <td class="cell-label"></td>
                           </tr>
-                          <%if @truck.sevendecontrailer=='Si' %>
-                              <tr class="nymou">
-                                  <td class="cell-label">
-                                      <b>Marca Trailer</b><br>
-                                      <%= @truck.marcatrailer? ? @truck.marcatrailer : 'Sin Información' %>
-                                  </td>
-                                  <td class="cell-label">
-                                    <b>Tipo de Trailer</b><br>
-                                    <%= @truck.tipotrailer? ? @truck.tipotrailer : 'Sin Información'%>
-                                  </td>
-                                  <td class="cell-label">
-                                    <b>Modelo Trailer</b><br>
-                                    <%= @truck.modelotrailer? ? @truck.modelotrailer : 'Sin Información' %>
-                                  </td>
-                                  <td class="cell-label">
-                                    <b>Número de ejes del Trailer</b><br>
-                                    <%= @truck.numeroejestrailer? ? @truck.numeroejestrailer : 'Sin Información' %>
-                                  </td>
-                                  <td class="cell-label">
-                                    <b>Número de ejes Retractiles</b><br>
-                                    <%= @truck.ejesretractiles? ?  @truck.ejesretractiles : 'Sin Información' %>
-                                  </td>
-                              </tr>
-                          <% end %>
-                          <tr class="nymou">
-                            <td class="cell-label">
-                              <b>Negociable</b><br>
-                              <%=  @truck.negociable.nil? ?  'Sin Información' : (@truck.negociable? ? 'Si': 'No') %>
-                            </td>
-                            <td class="cell-label"></td>
-                            <td class="cell-label"></td>
-                            <td class="cell-label"></td>
-                          </tr>
+                          
+                          <%= render partial: 'shared/showSeVendeTrailler' ,locals: { object: @truck} %>
                       <% end %>
                   <!--VAN-->
                       <% if @truck.type_truck_id == 6 %>
-                      <td class="cell-label">
-                          <b>Capacidad de Carga</b><br>
-                          <%= @truck.capacidadcarga.nil? ? 'Sin Información' : @truck.capacidadcarga %>
-                      </td>
-                      <td class="cell-label">
-                          <b>Capacidad de Pasajeros</b><br>
-                          <%= @truck.capacidadpasajeros.nil? ? 'Sin Información' : @truck.capacidadpasajeros %>
-                      </td>
-                      <tr class="nymou">
+                        <tr class="nymou">                       
                           <td class="cell-label">
                             <b>Cilindraje</b><br>
                             <%= @truck.cilindrajecc.nil? ? 'Sin Información' : @truck.cilindrajecc %>
                           </td>
                           <td class="cell-label">
                             <b>Dirreción</b><br>
-                            <%= @truck.direccion.nil? ? 'Sin Información' : @truck.direccion == 'Si' ? 'Hidraulica':'Mecanica' %>
-                          </td>
-                          <td class="cell-label">
-                            <b>Negociable</b><br>
-                            <%= @truck.negociable.nil? ? 'Sin Información' : @truck.negociable? ? 'Si': 'No' %>
+                            <%= @truck.direccion.nil? ? 'Sin Información' : @truck.direccion == 'Si' ? 'Hidraulica': 'Mecanica' %>
                           </td>
                           <td class="cell-label"></td>
-                          <td class="cell-label"></td>
-                      </tr>
+                          <td class="cell-label"></td>  
+                          <td class="cell-label"></td>                          
+                        </tr>
+                        <%= render partial: 'shared/showBusyVan', locals: { object: @truck} %>
                       <% end %>
+                  <%= render partial: 'shared/showCamposGeneralesII', locals:{ object: @truck} %>
                 </tbody>
               </table><!-- /.table .table-bordered -->
             </div><!-- /.table-responsive -->
